--- a/styles/views/home.css
+++ b/styles/views/home.css
@@ -52,3 +52,17 @@
     
     
 }
+
+.blue-button {
+    
+    
+    font-size: 18px; 
+    padding: 15px;
+    background-color: lightblue;
+    border: 1px solod lightblue;
+    border-radius: 50px; 
+    color: #fff;
+    font-weight: 600; 
+    
+    
+}
