--- a/styles/views/home.css
+++ b/styles/views/home.css
@@ -66,3 +66,22 @@
     
     
 }
+
+.person-quote {
+    
+    align: left;
+    
+   
+}
+
+.white-button {
+
+font-size: 18px; 
+    padding: 15px;
+    background-color: white;
+    border: 1px solid darkblue
+    border-radius: 50px; 
+    color: darkblue;
+    font-weight: 600; 
+
+}
